<resources>
    <string name="app_name">ClassMate</string>
    <string name="app_name_abbv">CM</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">408657482798831</string>
    <string name="title_activity_maps_activity_kyc">Map</string>
    <string name="title_activity_maps">Map</string>

    <!--kyc screen-->
    <string name="center_kyc_basic">Center</string>
    <string name="classlevel_kyc_basic">ClassLevel</string>
    <string name="subjectcount_kyc_basic">Subject Count</string>
    <string name="gender_kyc_basic">Gender</string>
    <string name="emailid_kyc_basic">Email Id</string>
    <string name="contact_kyc_basic">Contact</string>
    <string name="next_kyc_basic">Next</string>

    <string name="school_kyc">School Name</string>
    <string name="address_kyc_school">School Address</string>
    <string name="locality_kyc_school">School Locality</string>
    <string name="pincode_kyc_school">School Pincode</string>

    <string name="address_kyc_home">Home Address</string>
    <string name="locality_kyc_home">Home Locality</string>
    <string name="pincode_kyc_home">Home Pincode</string>

    <string name="name_kyc_father">Father \'s Name</string>
    <string name="contact_kyc_father">Father\'s Contact</string>
    <string name="email_kyc_father">Father\'s email</string>

    <string name="name_kyc_mother">Mother\'s Name</string>
    <string name="contact_kyc_mother">Mother\'s contact</string>
    <string name="email_kyc_mother">Mother\'s email</string>

    <!--student_listing_item-->
    <string name="default_user_name">User</string>
    <string name="default_user_id">U_89293</string>
    <string name="default_center_id">Center</string>
    <string name="default_percentage">0%</string>
    <string name="default_attendance">0%</string>

    <!--student detail activity -->
    <string name="toolbar_text">Student Details</string>


    <!--anurag strings-->

    <string name="no_event">No event</string>
    <string name="calendar_permission_required">Calendar access is required to manage your events</string>
    <string name="all_day">All day</string>
    <string name="grant_access">Grant access</string>
    <string name="today">Today</string>
    <string name="title">Title</string>
    <string name="event_time">Event time</string>
    <string name="event_calendar">Event calendar</string>
    <string name="warning_empty_title">Event title is required</string>
    <string name="choose_calendar">Choose a calendar</string>
    <string name="create_event">Create new event</string>
    <string name="edit_event">Edit event</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="confirm_delete">Delete this event?</string>
    <string name="confirm_discard_changes">Discard changes?</string>
    <string name="warning_missing_calendar">Please choose a calendar</string>
    <string name="end_time">Ends\n%s</string>
    <string name="default_calendar_name">Local Calendar</string>
    <string name="event_created">Event created.</string>
    <string name="event_updated">Event updated.</string>
    <string name="event_deleted">Event deleted.</string>
    <string name="morning">Morning</string>
    <string name="afternoon">Afternoon</string>
    <string name="night">Night</string>
    <string name="fahrenheit">%1$.1f\u00b0F</string>
    <string name="show_weather">Show weather</string>
    <string name="location_permission_required">Updating weather requires location access</string>
    <string name="week_start">Week start</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>
    <string name="calendars">Calendars</string>
    <string name="error_location">Unable to determine your location</string>

    <!-- TODO: Remove or change this placeholder text -->


    <string name="action_today">Today</string>
    <string name="action_day_view">Day view</string>
    <string name="action_three_day_view">3 day view</string>
    <string name="action_week_view">Week view</string>
    <string name="title_activity_basic">Basic Example</string>
    <string name="title_activity_asynchronous">Asynchronous Events</string>
    <string name="async_error">Could not download events from the internet</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_agenda_view">Agenda View</string>
    <string name="filter">filter</string>

    <string-array name="choices_dummy">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="action_logout">Logout</string>
    <string name="pleaseWait">Please wait...!!</string>
    <string name="action_all_attendance">All</string>
    <string name="action_batch_attendance">Filter By Batch</string>


    /// chat

    <!--<string name="api_host">http://10.140.64.90:8888</string>-->
    <!--<string name="socket_host"> ws://10.140.64.90:8888</string>-->
    <string name="api_host">http://103.26.201.48:8888</string>
    <string name="socket_host">ws://103.26.201.48:8888</string>
    <string name="enter_name">Enter your name and user id</string>
    <string name="btn_join">JOIN</string>
    <string name="btn_send">Send</string>
</resources>
