<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">





        <item android:id="@+id/action_today"
            android:title="@string/action_today"
            android:orderInCategory="100"
            app:showAsAction="ifRoom"/>
        <item android:id="@+id/action_day_view"
            android:title="@string/action_day_view"
            android:orderInCategory="100"
            app:showAsAction="never"/>
        <item android:id="@+id/action_three_day_view"
            android:title="@string/action_three_day_view"
            android:orderInCategory="100"
            app:showAsAction="never"
            android:checked="false"/>
        <item android:id="@+id/action_week_view"
            android:title="@string/action_week_view"
            android:orderInCategory="100"
            app:showAsAction="never"/>
        <item android:id="@+id/action_agenda_view"
            android:title="@string/action_agenda_view"
            android:orderInCategory="100"
            android:checked="true"
            app:showAsAction="never"/>




</menu>