<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:src="@drawable/usericon"
            android:layout_gravity="center"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/imageView4"
            android:layout_marginTop="8dp"/>
        <TextView
            android:id="@+id/student_listing_name"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:paddingTop="4dp"
            android:paddingBottom="2dp"
            android:text="@string/default_user_name"
            android:textSize="14sp"
            android:layout_below="@+id/imageView4"
            android:layout_centerHorizontal="true" />

        <TextView
                android:padding="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_user_id"
                android:textSize="12sp"
                android:id="@+id/student_listing_id"
                android:layout_below="@+id/student_listing_name"
                android:layout_toLeftOf="@+id/student_listing_name"
                android:layout_toStartOf="@+id/student_listing_name" />

        <TextView
            android:padding="4dp"
            android:textSize="12sp"
            android:id="@+id/student_listing_att_present"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_percentage"
            android:layout_below="@+id/student_listing_name"
            android:layout_toRightOf="@+id/student_listing_name"
            android:layout_toEndOf="@+id/student_listing_name" />

        <TextView
                android:padding="2dp"
                android:textSize="12sp"
                android:id="@+id/student_listing_center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_center_id"
            android:layout_below="@+id/student_listing_id"
            android:layout_toLeftOf="@+id/student_listing_att_present"
            android:layout_toStartOf="@+id/student_listing_att_present" />

    </RelativeLayout>

</android.support.v7.widget.CardView>