<?xml version="1.0" encoding="utf-8"?>
    <FrameLayout
        android:id="@+id/flay"
        android:padding="0dp"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="108dp">
        <ImageView
            android:layout_gravity="center_vertical"
            android:layout_marginTop="2dp"
            android:paddingLeft="16dp"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/usericon"
            android:id="@+id/student_listing_image"/>
        <LinearLayout
            android:layout_gravity="center_vertical"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="72dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/student_listing_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#1a1a1a"
                android:text="@string/default_user_name"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_user_id"
                android:textSize="14sp"
                android:textColor="#8c8c8c"
                android:id="@+id/student_listing_id"/>

             <TextView
                android:textSize="14sp"
                android:id="@+id/student_listing_center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_center_id"
                 android:textColor="#8c8c8c"
                 android:paddingBottom="2dp"/>
        </LinearLayout>
    </FrameLayout>