<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <android.support.design.widget.TextInputLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:dividerPadding="2dp">
            <EditText
                android:textColor="#000000"
                android:textColorHint="#727272"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/center_kyc_basic"
                android:id="@+id/center_kyc"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:dividerPadding="2dp">
            <EditText
                android:textColor="#000000"
                android:textColorHint="#727272"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/classlevel_kyc_basic"
                android:id="@+id/classlevel_kyc"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:dividerPadding="2dp">
            <EditText
                android:textColor="#000000"
                android:textColorHint="#727272"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                android:hint="@string/subjectcount_kyc_basic"
                android:id="@+id/subject_count_kyc"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:dividerPadding="2dp">
            <EditText
                android:textColor="#000000"
                android:textColorHint="#727272"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:hint="@string/emailid_kyc_basic"
                android:id="@+id/emailid_kyc"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:dividerPadding="2dp">
            <EditText
                android:textColor="#000000"
                android:textColorHint="#727272"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                android:hint="@string/contact_kyc_basic"
                android:id="@+id/contact_kyc"/>
        </android.support.design.widget.TextInputLayout>
        <Button
            android:id="@+id/next_kyc_button"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_kyc_basic"
            android:textColor="@color/textheadingcolor"
            android:background="@drawable/kyc_next_button_background"/>
    </LinearLayout>
</FrameLayout>